# MC-Protocol

./: LICENSE  README.md  mcp.py  pyproject.toml
examples/: sample.py
src/mcprotocol/: __init__.py  mcp.py
src/mcprotocol_udp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
